--- a/app/src/main/res/layout/activity_grocery.xml
+++ b/app/src/main/res/layout/activity_grocery.xml
@@ -12,33 +12,24 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-
-
-        >
+        android:layout_alignParentLeft="true">
 
 
         <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
-            android:orientation="vertical"
-            >
+            android:orientation="vertical">
 
 
             <RelativeLayout
                 android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
-
-                >
+                android:layout_height="fill_parent">
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="250dp"
                     android:orientation="vertical"
                     android:gravity="center"
-                    android:background="@drawable/all"
-
-
-                    >
+                    android:background="@drawable/all">
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -58,15 +49,12 @@
                     android:orientation="vertical"
                     android:layout_marginTop="260dp"
                     android:layout_marginRight="10dp"
-                    android:layout_marginLeft="10dp"
-                    
-                    >
+                    android:layout_marginLeft="10dp">
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="135dp"
                             android:orientation="horizontal"
-                            android:layout_marginBottom="10dp"
-                            >
+                            android:layout_marginBottom="10dp">
 
                             <androidx.cardview.widget.CardView
                                 android:layout_width="0dp"
@@ -74,10 +62,7 @@
                                 android:layout_weight="1"
                                 android:gravity="center"
                                 android:orientation="vertical"
-                                android:layout_marginRight="5dp"
-
-
-                                >
+                                android:layout_marginRight="5dp">
 
                                 <RelativeLayout
                                     android:layout_width="match_parent"
@@ -86,7 +71,7 @@
 
                                     <ImageButton
                                         android:layout_width="match_parent"
-                                        android:layout_height="wrap_content"
+                                        android:layout_height="match_parent"
                                         android:onClick="vegCategory"
                                         android:src="@drawable/vegetables" />
 
@@ -107,13 +92,6 @@
 
                                 </RelativeLayout>
 
-
-
-
-
-
-
-
                             </androidx.cardview.widget.CardView>
 
 
@@ -124,8 +102,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="135dp"
                         android:orientation="horizontal"
-                        android:layout_marginBottom="10dp"
-                        >
+                        android:layout_marginBottom="10dp">
 
                         <androidx.cardview.widget.CardView
                             android:layout_width="0dp"
@@ -133,10 +110,7 @@
                             android:layout_weight="1"
                             android:gravity="center"
                             android:orientation="vertical"
-                            android:layout_marginRight="5dp"
-
-
-                            >
+                            android:layout_marginRight="5dp">
 
                             <RelativeLayout
                                 android:layout_width="match_parent"
@@ -166,13 +140,6 @@
 
                             </RelativeLayout>
 
-
-
-
-
-
-
-
                         </androidx.cardview.widget.CardView>
 
 
@@ -183,8 +150,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="135dp"
                         android:orientation="horizontal"
-                        android:layout_marginBottom="10dp"
-                        >
+                        android:layout_marginBottom="10dp">
 
                         <androidx.cardview.widget.CardView
                             android:layout_width="0dp"
@@ -192,10 +158,7 @@
                             android:layout_weight="1"
                             android:gravity="center"
                             android:orientation="vertical"
-                            android:layout_marginRight="5dp"
-
-
-                            >
+                            android:layout_marginRight="5dp">
 
                             <RelativeLayout
                                 android:layout_width="match_parent"
@@ -205,9 +168,7 @@
                                 <ImageButton
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
-                                    android:src="@drawable/grocery"
-
-                                    />
+                                    android:src="@drawable/grocery" />
 
                                 <TextView
                                     android:layout_width="wrap_content"
@@ -226,20 +187,12 @@
                             </RelativeLayout>
 
 
-
-
-
-
-
-
                         </androidx.cardview.widget.CardView>
 
 
                     </LinearLayout>
 
                 </LinearLayout>
-
-
 
 
             </RelativeLayout>
